# EasyLinalg

./: .gitignore  README.md
OtherExamples/python/: basic_test.py  eigen_test.py  kde_test_md.py
StaticMem/: CMakeLists.txt  static_3by3.h  static_4by4.h  static_8by8.h  test_static_3by3.cpp  test_static_4by4.cpp  test_static_8by8.cpp
StaticMemTemplate/: CMakeLists.txt  mathTemplate.h  test.cpp
StaticMemTemplate/include/: basic.h  blas.h  eigen.h  equation.h  kde.h  kdemv.h  matrixdet.h  matrixinv.h  qr.h  version.config
StaticMemTemplate/test/: test_basic.cpp  test_blas.cpp  test_data.h  test_eigen.cpp  test_kde.cpp  test_kdemv.cpp  test_matrixdet.cpp  test_temp.cpp
StaticMemTemplate/test/tester/: kde.h  kdepp.h
